# ollamax

./: .editorconfig  .gitignore  CHANGELOG.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  FIRST_LAUNCH_GUIDANCE.md  FULL_AUDIT_REPORT.md  HERMES_VOICE_BUILD_REPORT.md  HERMES_VOICE_DESIGN.md  LAUNCH_READINESS_REPORT.md  LICENSE  LOGIN_AND_DOWNLOAD_FIX_REPORT.md  LOGIN_SETUP.md  MEMORY_AND_GRAPH_REPORT.md  MODELS_TOOLS_ORCHESTRATION_REPORT.md  ONELINE_INSTALLER_REPORT.md  PERF_UI_VISION_REPORT.md  README.de.md  README.ja.md  README.md  README.pt.md  README.zh.md  ROUND3_BUILD_REPORT.md  ROUND3_PROVIDER_INVESTIGATION.md  ROUND4_BUILD_REPORT.md  ROUND5_BUILD_REPORT.md  ROUND6_BUILD_REPORT.md  SECURITY.md  STANDALONE_APP_REPORT.md  UNSIGNED_DOWNLOADS_BUILD_REPORT.md  VSCODE_APP_BUILD_REPORT.md  VSCODE_REPLATFORM_REPORT.md  build.rs  forge.toml  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-app.yml  release-desktop.yml  release-fork.yml  release.yml  security.yml
desktop/: FIRST-RUN.md  README.md  install.ps1  install.sh  product.json.example
desktop-app/: .gitignore  README.md  cursor-buddy-preload.js  cursor-buddy-state.js  main.js  package-lock.json  package.json  preload.js  spatial-preload.js  spatial-selection.js  spatial-selection.test.js
desktop-app/assets/: entitlements.mac.plist  icon.icns
desktop-app/companion/: companion.js  preload-overlay.js  protocol.js  protocol.test.js  stt.js  tts.js
desktop-app/lib/: attachment-preview.js  desktop-auth.js  desktop-security.js  voice-runtime.js  workspace-paths.js
desktop-app/renderer/: app-shell.js  bridge.js  companion-overlay.html  companion-overlay.js  cursor-buddy.css  cursor-buddy.html  cursor-buddy.js  desktop-points.js  desktop-spatial.js  desktop-voice.js  hub-bridge.js  hub.js  ide.js  index.html  point-directives.js  spatial-overlay.css  spatial-overlay.html  spatial-overlay.js  theme.css  vscode-shim.js
desktop-app/scripts/: afterPack.js  download-pinned-whisper-model.py  prepare.mjs  stage-whisper-runtime.mjs  validate-package.js  validate-runtime.mjs  voice-contract.cjs
desktop-app/test/: attachment-preview.test.js  cursor-buddy-state.test.js  desktop-auth.test.js  desktop-security.test.js  hub-input-safety.test.js  model-output-escaping.test.js  package-validation.test.js  point-directives.test.js  voice-runtime.test.js  workspace-paths.test.js
desktop-app/voice/: manifest.json
desktop/assets/: entitlements.mac.plist
desktop/bundle/: README-FIRST.md  install.ps1  install.sh
desktop/scripts/: apply-product-overlay.js  bootstrap.sh  bundle-forge.sh  make-dmg.sh  make-icons.sh  set-bundled-defaults.js  sign-macos.sh  sign-windows.ps1
docs/: local-agent-capability-gap-analysis.md
editor-integrations/forge-vscode/: .vscodeignore  README.md  package.json
editor-integrations/forge-vscode/media/: hub.css  hub.js  main.css  main.js
editor-integrations/forge-vscode/src/: auth.js  backend.js  chatViewProvider.js  extension.js  external-url.js  external-url.test.js  hub.js  telemetry.js  voice.js  workspace-preview-paths.js  workspace-preview-paths.test.js
editor-integrations/forge.nvim/: README.md
editor-integrations/forge.nvim/lua/forge/: init.lua
editor-integrations/forge.nvim/plugin/: forge.lua
plugins/: registry.json
skills/recipes/: api-designer.json  docker-expert.json  lora-finetune.json  react-native-expert.json  security-auditor.json
src/: lib.rs  main.rs
src/agent/: mod.rs
src/cli/: mod.rs
src/codeblocks/: mod.rs
src/context/: mod.rs
src/evals/: mod.rs
src/executor/: mod.rs
src/graph/: mod.rs
src/hub/: mod.rs  taxonomy.json
src/instincts/: mod.rs
src/mcp/: mod.rs
src/memory/: mod.rs
src/models/: mod.rs
src/monitoring/: mod.rs
src/orchestrator/: mod.rs
src/plugins/: mod.rs
src/providers/: local_endpoints.rs  mod.rs  ollama.rs  openai_compatible.rs
src/replay/: mod.rs
src/router/: mod.rs
src/rules/: mod.rs
src/scheduler/: mod.rs
src/security/: mod.rs
src/server/: console.html  mod.rs
src/skills/: mod.rs
src/team/: mod.rs
src/tools/: arxiv.rs  delegate.rs  fetch_url.rs  files.rs  mod.rs  shell.rs  web_search.rs  wikipedia.rs
tests/: agent_workspace.rs  build_extractor.rs  context_manager.rs  heterogeneous_routing.rs  monitoring_logic.rs  plugins.rs  router_complexity.rs  security_scanner.rs  server_local_endpoint.rs  server_protocol.rs  server_team.rs  skill_md_compat.rs  skill_recipes_parse.rs  structured_output.rs  team_workspace.rs  tools_html_and_arxiv.rs
website/: .env.example  .gitignore  README.md  SECURITY-THREATMODEL.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
website/db/: schema.sql
website/src/: auth.ts  middleware.ts  proxy.ts
website/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
website/src/app/account/: page.tsx
website/src/app/api/analytics/export/: route.ts
website/src/app/api/health/: route.ts
website/src/app/api/me/: route.ts
website/src/app/api/stats/: route.ts
website/src/app/dashboard/: actions.ts  page.tsx
website/src/app/desktop/activate/: ActivateForm.tsx  page.tsx
website/src/app/download/: page.tsx
website/src/app/privacy/: page.tsx
website/src/app/star/[id]/: StarList.tsx  page.tsx
website/src/app/star/error/: page.tsx
website/src/components/: CTA.tsx  CinematicVideo.tsx  Comparison.tsx  CopyCommand.tsx  DesktopAppDownload.tsx  DownloadButtons.tsx  DownloadGrid.tsx  FAQ.tsx  Features.tsx  FirstLaunchGuide.tsx  Footer.tsx  GitHubMark.tsx  GoogleMark.tsx  Hero.tsx  HowItWorks.tsx  Nav.tsx  Privacy.tsx  SectionHeading.tsx  SignupCounter.tsx
website/src/components/ui/: button.tsx  card.tsx
website/src/lib/: analytics.test.ts  analytics.ts  audit.ts  crypto.ts  db.ts  downloads.ts  env.ts  identity-rules.test.ts  identity-rules.ts  oauth.ts  os.test.ts  os.ts  ratelimit.ts  tokens.ts
website/src/lib/hub/: compile.ts  ingest.ts  quality.ts  taxonomy.ts
website/src/types/: next-auth.d.ts
(+18 files in other folders)
