[package]
name = "ollama-forge"
version = "0.1.0"
edition = "2021"
authors = ["Pranay Rishi Nalem"]
description = "Harness optimization layer for local coding agents running on Ollama"
license = "MIT"
repository = "https://github.com/pranayrishi/ollamax"
keywords = ["ollama", "llm", "cli", "agent", "coding"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.75.0"

[[bin]]
name = "forge"
path = "src/main.rs"

[lib]
name = "ollama_forge"
path = "src/lib.rs"

[dependencies]
# Async runtime. `full` is fine — every tokio feature is in use somewhere.
tokio = { version = "1.35", features = ["full"] }
# HTTP client for the Ollama provider. rustls-tls so we don't drag in OpenSSL.
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
# JSON for skill recipes, Ollama wire protocol, and rocm-smi parsing.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# CLI.
clap = { version = "4.4", features = ["derive", "cargo", "wrap_help"] }
# Errors.
anyhow = "1.0"
thiserror = "1.0"
# Logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Async trait sugar for the LlmProvider abstraction.
async-trait = "0.1"
# Hardware introspection.
sysinfo = "0.30"
# Config + cache directories.
dirs = "5.0"
# Audit log timestamps.
chrono = { version = "0.4", features = ["serde"] }
# Session IDs and worker IDs.
uuid = { version = "1.6", features = ["v4", "serde"] }
# Secret-scanner regex engine.
regex = "1.10"
# Recursive directory walk for `forge audit`.
walkdir = "2.4"
# Real BPE tokenizer for accurate context budgeting. We use cl100k_base
# (the GPT-3.5/4 tokenizer) as a calibrated stand-in — it's not the exact
# tokenizer Llama or Qwen use, but it's within ~10% on code/prose and far
# better than the chars/3 fallback. Local LLM models (Llama, Qwen) ship
# their own SentencePiece tokenizers; loading those properly would mean
# pulling the full `tokenizers` crate (~3 MB of compile time and a runtime
# data file), so we accept the small inaccuracy here for build speed.
tiktoken-rs = "0.5"
# Real SHA-256 for the replay log. We previously used
# `std::hash::DefaultHasher` which is documented as "may change between Rust
# releases" — meaning replay hashes wouldn't be reproducible across stdlib
# versions. The whole audit-trail pitch hinges on stable hashes, so this
# dep is mandatory, not optional. `sha2` is small (~30 KB compiled), well
# audited, and pure Rust.
sha2 = "0.10"

[dev-dependencies]
# Used by tests/security_scanner.rs to build a sandbox dir.
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[features]
default = ["color"]
color = ["clap/color"]
